training-app-deployment/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
  name: frontend
  namespace: training-app-frontend-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - image: karimzomita/t006-website:dev
          name: application-website
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
          ports:
            - containerPort: 80
          volumeMounts:
            - name: configs
              mountPath: /app/assets/configs
      volumes:
        - name: configs
          configMap:
            name: configs-front
