training-app-deployment/k8d-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-dep
  namespace: training-app-backend-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      
        - name: backend-training
          image: xqliza/t005-backend:dev
          ports:
            - containerPort: 3000
        - name: qr-training
          image: xqliza/t005-qr:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 8420
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-dep
  namespace: training-app-frontend-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: website-training
          image: xqliza/t005-website:dev
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: "/usr/share/nginx/html/assets/configs"
              name: frontconfig-volume
      volumes:
        - configMap:
            name: frontconfig
          name: frontconfig-volume
