training-app-deployment/website-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-deployment
  namespace: training-app-frontend-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
        - name: website
          image: housseinhmila/t-007-website:dev
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config-volume
              mountPath: /etc/nginx/html/assets/configs
      volumes:
        - name: config-volume
          configMap:
            name: website-configmap
        
         
---
