training-app-deployment/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: training-app-backend-prod
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3000
