training-app-deployment/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: training-app-frontend-prod
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: frontend
