training-app-deployment/k8d-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: training-app-backend-prod
spec:
  type: LoadBalancer
  ports:
    - port: 9099
      targetPort: 3000
  selector:
    app: myapp

---

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: training-app-frontend-prod
spec:
  type: LoadBalancer
  selector:
    app: myapp
  ports:
    - port: 80
      targetPort: 80
